--- a/package.json
+++ b/package.json
@@ -8,8 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "codemirror": "^5.65.8",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "dedent": "^0.7.0",
+    "dedent-js": "^1.0.1",
+    "element-ui": "^2.15.9",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
+    "lodash": "^4.17.21",
+    "vue": "^2.6.14",
+    "vue-codemirror": "^4.0.6",
+    "vue-router": "^3.6.5",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -33,7 +44,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars": "off"
+    }
   },
   "browserslist": [
     "> 1%",
